--- a/arch/arm/boot/dts/imx6qdl-udoo-externalpins.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-udoo-externalpins.dtsi
@@ -32,8 +32,9 @@
             MX6QDL_PAD_CSI0_DAT15__GPIO6_IO01    0x80000000  // {{external-gpio-17}}
             MX6QDL_PAD_CSI0_DAT12__GPIO5_IO30    0x80000000  // {{external-gpio-18}}
             MX6QDL_PAD_CSI0_DAT13__GPIO5_IO31    0x80000000  // {{external-gpio-19}}
-            MX6QDL_PAD_EIM_D21__GPIO3_IO21       0x80000000  // {{external-gpio-20}}
-            MX6QDL_PAD_EIM_D28__GPIO3_IO28       0x80000000  // {{external-gpio-21}}
+            // Comment these out as these pins will be used by the i2c1
+            // MX6QDL_PAD_EIM_D21__GPIO3_IO21       0x80000000  // {{external-gpio-20}}
+            // MX6QDL_PAD_EIM_D28__GPIO3_IO28       0x80000000  // {{external-gpio-21}}
             MX6QDL_PAD_DISP0_DAT6__GPIO4_IO27    0x80000000  // {{external-gpio-22}}
             MX6QDL_PAD_DISP0_DAT7__GPIO4_IO28    0x80000000  // {{external-gpio-23}}
             MX6QDL_PAD_DISP0_DAT8__GPIO4_IO29    0x80000000  // {{external-gpio-24}}
@@ -199,7 +200,7 @@
 	clock-frequency = <100000>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c1>;
-	status = "disabled";
+	status = "okay";
 };
 
 
