udoo: Add I²C bus recovery pin configuration to device tree.
The I²C bus recovery feature must reconfigure the SDA and SCL pins
in GPIO mode. The added pinctrl entries allows driver to know which
pins should be used and necessary changes to registers to put them
into GPIO mode.

--- a/arch/arm/boot/dts/imx6qdl-udoo-externalpins.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-udoo-externalpins.dtsi
@@ -197,8 +197,11 @@
 
 &i2c1 {
 	clock-frequency = <100000>;
-	pinctrl-names = "default";
+	pinctrl-names = "default", "gpio";
 	pinctrl-0 = <&pinctrl_i2c1>;
+	pinctrl-1 = <&pinctrl_i2c1_recovery>;
+	scl-gpios = <&gpio3 21 GPIO_ACTIVE_HIGH>;
+	sda-gpios = <&gpio3 28 GPIO_ACTIVE_HIGH>;
 	status = "disabled";
 };
 
